fix gap

--- a/src/main/resources/static/css/list.css
+++ b/src/main/resources/static/css/list.css
@@ -255,6 +255,7 @@ body {
     padding: 8px 40px 40px;
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
+    margin-top: 20px;
 }
 
 .todo-table {
